--- a/public/css/perfilEditar.css
+++ b/public/css/perfilEditar.css
@@ -19,13 +19,19 @@ body{
     border: 1px solid #dee2e6;
 }
 
-
+.bg-orange.box-shadow {
+    box-shadow: 0px 5px 0px 0px #af4305
+}
 .bg-sky.box-shadow {
     box-shadow: 0px 5px 0px 0px #00a2a7
 }
 
 .bg-green.box-shadow {
     box-shadow: 0px 5px 0px 0px #4ca520
+}
+
+.bg-orange {
+    background-color: #e95601
 }
 
 .bg-sky {
